src/codegen/tests/snapshots/rusty__codegen__tests__codegen_error_messages_tests__pointer_binary_expression_modulo.snap
---
source: src/codegen/tests/codegen_error_messages_tests.rs
expression: msg
---
error: Operator 'MOD' unimplemented for pointers
  ┌─ <internal>:8:16
  │
8 │         ptr := ptr MOD ptr;
  │                ^^^^^^^^^^^ Operator 'MOD' unimplemented for pointers


